Bug 79486. Make sure that |MoveChildrenTo()| correctly updates the NS_FRAME_HAS_CHILD_WITH_VIEW flag when moving child frames into the new {ib} split frames. r=dbaron, sr=attinasi.