layout/html/style/src/nsCSSFrameConstructor.cpp
@@ -469,21 +469,51 @@ FindLastBlock(nsIPresContext* aPresContext, nsIFrame* aKid)
   return lastBlock;
 }
 
-static nsresult
-MoveChildrenTo(nsIPresContext* aPresContext,
+/**
+ * Moves frames to a new parent, updating the style context and
+ * propagating relevant frame state bits. |aNewParentSC| may be null,
+ * in which case the child frames' style contexts will remain
+ * untouched.
+ */
+static void
+MoveChildrenTo(nsIPresContext*  aPresContext,
                nsIStyleContext* aNewParentSC,
-               nsIFrame* aNewParent,
-               nsIFrame* aFrameList)
+               nsIFrame*        aNewParent,
+               nsIFrame*        aFrameList)
 {
-  // XXX We ignore the new parent SC: should we be reparenting?
+  PRBool setHasChildWithView = PR_FALSE;
+
   while (aFrameList) {
+    if (! setHasChildWithView) {
+      nsFrameState state;
+      aFrameList->GetFrameState(&state);
+      if (state & (NS_FRAME_HAS_VIEW | NS_FRAME_HAS_CHILD_WITH_VIEW))
+        setHasChildWithView = PR_TRUE;
+    }
+
     aFrameList->SetParent(aNewParent);
     aFrameList->GetNextSibling(&aFrameList);
+
+#if 0
+    // XXX In the cases where this is used (specifically, {ib} frame
+    // mangling), it seems fine to leave the style contexts of the
+    // children of the anonymous block frame parented by the original
+    // inline frame. (In fact, one would expect some inheritance
+    // relationships to be broken if we reparented them to the
+    // anonymous block frame, but oddly they aren't -- need to
+    // investigate that...)
+    if (aNewParentSC)
+      aPresContext->ReParentStyleContext(aFrameList, aNewParentSC);
+#endif
   }
-  return NS_OK;
+
+  if (setHasChildWithView) {
+    nsFrameState state;
+    aNewParent->GetFrameState(&state);
+    state |= NS_FRAME_HAS_CHILD_WITH_VIEW;
+    aNewParent->SetFrameState(state);
+  }
 }
-
-
 
 // -----------------------------------------------------------
 
@@ -8825,7 +8855,7 @@ nsCSSFrameConstructor::ContentInserted(nsIPresContext* aPresContext,
     } 
 
 #ifdef DEBUG
-    if (gReallyNoisyContentUpdates) {
+    if (gReallyNoisyContentUpdates && parentFrame) {
       nsIFrameDebug* fdbg = nsnull;
       parentFrame->QueryInterface(NS_GET_IID(nsIFrameDebug), (void**) &fdbg);
       if (fdbg) {
@@ -12825,8 +12855,8 @@ nsCSSFrameConstructor::ConstructInline(nsIPresShell*            aPresShell,
     nsHTMLContainerFrame::ReparentFrameViewList(aPresContext, list2, oldParent, blockFrame);
   }
 
-  MoveChildrenTo(aPresContext, blockSC, blockFrame, list2);
   blockFrame->SetInitialChildList(aPresContext, nsnull, list2);
+  MoveChildrenTo(aPresContext, blockSC, blockFrame, list2);
 
   // list3's frames belong to another inline frame
   nsIFrame* inlineFrame = nsnull;
@@ -12855,10 +12885,8 @@ nsCSSFrameConstructor::ConstructInline(nsIPresShell*            aPresShell,
 
     // Reparent (cheaply) the frames in list3 - we don't have to futz
     // with their style context because they already have the right one.
-    nsFrameList list;
-    list.AppendFrames(inlineFrame, list3);
-
     inlineFrame->SetInitialChildList(aPresContext, nsnull, list3);
+    MoveChildrenTo(aPresContext, nsnull, inlineFrame, list3);
   }
 
   // Mark the 3 frames as special. That way if any of the
@@ -13286,7 +13314,7 @@ nsCSSFrameConstructor::SplitToContainingBlock(nsIPresContext* aPresContext,
                       nsnull, styleContext, nsnull, inlineFrame);
 
   inlineFrame->SetInitialChildList(aPresContext, nsnull, aRightInlineChildFrame);
-  MoveChildrenTo(aPresContext, styleContext, inlineFrame, aRightInlineChildFrame);
+  MoveChildrenTo(aPresContext, nsnull, inlineFrame, aRightInlineChildFrame);
 
   // Make the "special" inline-block linkage between aFrame and the
   // newly created anonymous frames. We need to create the linkage
